project(qsl)
cmake_minimum_required(VERSION 2.6)

set(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README")
set(CPACK_GENERATOR "DEB")
#set(CPACK_GENERATOR "DEB;RPM")
set(DEBIAN_PACKAGE_DESCRIPTION "A Qt based scientific library")
set(DEBIAN_PACKAGE_SECTION "Science")
set(CPACK_SOURCE_GENERATOR "TBZ2")
set(CPACK_PACKAGE_VERSION_MAJOR "1")
set(CPACK_PACKAGE_VERSION_MINOR "0")
set(CPACK_PACKAGE_VERSION_PATCH "0")
set(CPACK_PACKAGE_CONTACT "Elvis Teixeira <elvismtt@gmail.com>")
set(QSL_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}")
set(QSL_VERSION_FULL "${QSL_VERSION}.${CPACK_PACKAGE_VERSION_PATCH}")
set(CPACK_SOURCE_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}-${QSL_VERSION_FULL}")
set(CPACK_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}-${QSL_VERSION_FULL}")
include(CPack)

find_package(Qt4 REQUIRED)
include_directories (${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR})
include(${QT_USE_FILE})
add_definitions(${QT_DEFINITIONS})

add_subdirectory(src)

#to add Qt modules
#set(QT_USE_QTOPENGL TRUE)
